--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.15",
+    "expo-cli": "^6.3.7",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
